# vaporetto-models

./: .gitmodules  Cargo.toml  README.md
convert_bccwj_xml/: Cargo.toml
convert_bccwj_xml/src/: main.rs
convert_unidic_csv/: Cargo.toml
convert_unidic_csv/src/: main.rs
models/bccwj-luw/: build.sh
models/bccwj-suw/: build.sh
models/bccwj-suw+unidic_pos+kana/: BSD  build.sh
models/bccwj-suw+unidic_pos+pron/: build.sh
models/bccwj-suw_c0.003/: LICENSE  build.sh
models/bccwj-suw_c0.1/: build.sh
models/bccwj-suw_c0.5/: build.sh
models/bccwj-suw_c1.0/: build.sh
