[package]
name = "convert_unidic_csv"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] } # MIT or Apache-2.0
csv = "1.2" # Unlicense or MIT
once_cell = "1.17" # MIT or Apache-2.0
regex = "1.8" # MIT or Apache-2.0
vaporetto = "0.6.3" # MIT or Apache-2.0
